--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "pinia": "^2.0.23",
+    "postcss-scss": "^4.0.5",
     "uid": "^2.0.1",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
@@ -20,8 +21,11 @@
     "@vitejs/plugin-vue": "^3.1.2",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.12",
+    "node-sass": "^7.0.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.18",
+    "postcss-sass": "^0.5.0",
+    "sass-loader": "^13.1.0",
     "tailwindcss": "^3.2.1",
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
