Added firebase as a dependency

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "firebase": "^9.12.1",
     "pinia": "^2.0.23",
     "sass": "^1.55.0",
     "uid": "^2.0.1",
